2009-09-19  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw.h: Made the __forceinline definition to mirror the FORCEINLINE
	definition in winnt.h

2009-09-18  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw.h, io.h, rpcndr.h, strsafe.h. time.h, vadefs.h:  Now that the
	__MINGW_EXTENSION macro is in effect, remove the gcc-specific typedefs
	using machine modes for strict ansi cases and 64 bit scalars.

	* wctype.h: Added the missing __cplusplus guard around wchar_t typedef.

2009-09-18  Kai Tietz  <kai.tietz@onevision.com>

        * Implement time_t related functions by stubs in libmingwex.a and do
        export them in .def as DATA. So just the imp_<name> is present and we
        avoid collisions in names. Reasoned is this patch by dlltool's inability
        to alias symbols.

2009-09-18  Ozkan Sezer  <sezeroz@gmail.com>

	* _mingw_print_pop.h:  Fixed compilation when __USE_MINGW_ANSI_STDIO is defined,
	but not to a specific value.
	* _mingw_print_push.h: Likewise.

2009-09-17  Kai Tietz  <kai.tietz@onevision.com>

        * time.h, wchar.h, tchar.h: Add for time specific function the _<name>32 version
	to headers and use them in inline version.

2009-09-15  Kai Tietz  <kai.tietz@onevision.com>

        * time.h: Use of _localtime32, _gmtime32, and _mkgmtime32.

2009-09-11  Kai Tietz  <kai.tietz@onevision.com>

	* winnt.h (FORCEINLINE): Add __attribute__((always_inline)) to
	it and remove static.

2009-09-11  Ozkan Sezer  <sezeroz@gmail.com>

	* time.h (gmtime_r): Fixed a long standing nasty typo in macro.
	(localtime_r): Likewise.

2009-09-09  Ozkan Sezer  <sezeroz@gmail.com>

	* winnt.h:  Removed extra _WIN64 ifdef guards from the instrins
	where they are already being declared under the __x86_64 case.
	Added comments to the #endifs for easier reading.

	* winnt.h:  Added missing intrinsic macros for x86 case.  They
	were already defined for x86_64 but not for x86, therefore the
	library versions of them lacked the leading underscore, which